--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.4"
+    "astro": "^5.7.4",
+    "cheerio": "^1.0.0",
+    "microcms-js-sdk": "^3.2.0"
   }
 }
